<resources>
    <string name="app_name">cookcode</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="pw_valid">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="register">회원가입</string>
    <string name="done">완료</string>
    <string name="cancel">취소</string>
    <string name="err_type">제대로 된 값이 입력되지 않았습니다.</string>
    <string name="hint_email">cookcode@gmail.com</string>
    <string name="hint_nickname">쿡코드짱123</string>
    <string name="hint_pw">영어 소문자, 숫자, 특수문자 모두 포함 8자 이상</string>
    <string name="dup_test">중복확인</string>
    <string name="duplicated_nickname">이미 존재하는 닉네임입니다.</string>
    <string name="duplicated_email">이미 존재하는 아이디입니다.</string>
    <string name="err_userdata">아이디/비밀번호를 확인해주세요.</string>
    <string name="err_server">잠시 후 다시 시도해주세요.</string>
    <string name="cookie">쿠키</string>
    <string name="cookie_name">쿠키 제목</string>
    <string name="home">홈</string>
    <string name="refrigerator">냉장고</string>
    <string name="recipe">레시피</string>
    <string name="recipe_name">레시피 제목</string>
    <string name="main_image">대표 이미지</string>
    <string name="description">설명</string>
    <string name="essential_ingredient">주 재료</string>
    <string name="additional_ingredient">보조 재료</string>
    <string name="add">추가</string>
    <string name="add_with_plus">+ 추가</string>
    <string name="type_word">입력해주세요</string>
    <string name="goto_preview">미리보기하고 업로드</string>
    <string name="step">스텝</string>
    <string name="new_recipe">레시피 제작</string>
    <string name="image">이미지</string>
    <string name="video">동영상</string>
    <string name="step_title">스텝 제목</string>
    <string name="step_description">스텝 설명</string>
    <string name="update_image">이미지 변경</string>
    <string name="delete_image">이미지 삭제</string>
    <string name="update_video">동영상 변경</string>
    <string name="delete_video">동영상 삭제</string>
    <string name="recipe_upload">레시피 업로드</string>
    <string name="user">사용자</string>
    <string name="Recent_searched">최근 검색어</string>
    <string name="like">좋아요</string>
    <string name="view">조회수</string>
    <string name="made_user_is">게시자 : </string>
    <string name="meat">육류</string>
    <string name="seafood">해산물</string>
    <string name="grain">곡물</string>
    <string name="vegetable">채소</string>
    <string name="fruit">과일</string>
    <string name="sauce">양념</string>
    <string name="hello_user">님 안녕하세요!</string>
    <string name="logout">로그아웃</string>
    <string name="delete_user">계정 삭제</string>
    <string name="update_ingredient">식재료 수정</string>
    <string name="ingredient_name">식재료명</string>
    <string name="ingredient_value">재료양(%s)</string>
    <string name="confirm">확인</string>
    <string name="expired_at">유통기한</string>
    <string name="search_ingred_for_name">식재료 이름으로 검색..</string>
    <string name="ingred_quantity">%d%s</string>
    <string name="hint_date">yyyy-MM-dd</string>
    <string name="delete">삭제</string>
    <string name="modify">수정</string>
    <string name="step_number">%d단계</string>
    <string name="step_add">%d단계 스텝 추가하기</string>
    <string name="data_loading">데이터를 로딩중 입니다..</string>
    <string name="cookable">요리하자</string>
    <string name="sort_createdAt">최신순 정렬</string>
    <string name="sort_popular">인기순 정렬</string>
    <string name="created_at">작성시간</string>
    <string name="upload">업로드</string>
    <string name="preview">미리보기</string>
    <string name="annotation_cookie_preview">영상들을 업로드 하시면\n제작될 영상을 미리 볼 수 있습니다.</string>
    <string name="comment">댓글</string>
    <string name="type_hint">여기를 클릭해 입력하세요..</string>
    <string name="report">신고</string>
    <string name="no_exist_comment">아직 댓글이 없습니다.</string>
    <string name="cookie_info">쿠키 정보</string>
    <string name="title_is">제목 : </string>
    <string name="string_shadow_convert">%s\t</string>
    <string name="subscribed_users">구독한 크리에이터 관리</string>
    <string name="premium_membership_manage">프리미엄 멤버십 구독 관리</string>
    <string name="request_authority">인플루언서 권한 요청</string>
    <string name="influencer_only">인플루언서 전용</string>
    <string name="earnings_check">수익 조회</string>
    <string name="premium_contents">프리미엄 컨텐츠 관리</string>
    <string name="my_contents">내 컨텐츠 관리</string>
    <string name="subscribe_users">구독자 %d명</string>
    <string name="mypage_title">MyPage</string>
    <string name="premium_content">프리미엄\n컨텐츠</string>
    <string name="subscribe">구독하기</string>
    <string name="subscribed">구독중</string>
    <string name="subscribers">구독자</string>
    <string name="like_number">좋아요 %d개\t</string>
    <string name="my_subscribers">나를 구독한 유저</string>
    <string name="my_subscribed">내가 구독한 유저</string>
    <string name="tutorial_expire">: 유통기한이 2일 이하 남았을 때 표시됩니다.</string>
    <string name="modify_password">비밀번호 변경</string>
    <string name="new_cookie">쿠키 제작</string>
    <string name="modify_cookie">쿠키 수정</string>
    <string name="before_pw">기존 비밀번호</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="your_email_address">가입된 이메일 주소</string>
    <string name="temp_pw">임시 비밀번호 발급</string>
    <string name="email_valid_test">인증번호</string>
    <string name="btn_valid_test">인증하기</string>
    <string name="admin_page">관리자 전용 페이지</string>
    <string name="manage_influencer_request">인플루언서 요청 관리</string>
    <string name="accept">승인</string>
    <string name="deny">거부</string>
    <string name="no_exist_ingred">: 현재 부족한 식재료</string>
    <string name="isCookable">요리하자</string>
    <string name="request_user_id">User Id : %d</string>
    <string name="request_created_at">Created At : %s</string>
    <string name="my_membership_manage">내 멤버십 등급 관리</string>
    <string name="membership_register">멤버십 가입</string>
    <string name="signin">가입</string>
    <string name="membership_price">₩%s/월</string>
    <string name="visibillity">공개권한 설정</string>
    <string name="normal">일반</string>
    <string name="premium">프리미엄</string>
    <string name="grade_name">등급명</string>
    <string name="price">멤버십 가격(원/month)</string>
    <string name="premium_membership_make">프리미엄 멤버십 제작</string>
    <string name="no_exist_request">요청이 없습니다.</string>
    <string name="signout">탈퇴</string>
    <string name="no_exist_membership">가입한 멤버십이 없습니다.</string>
    <string name="sort_subscribed">구독</string>
    <string name="sort_membership">프리미엄 멤버십</string>
</resources>