<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/user_id"
        android:text="@string/request_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/created_at"/>

    <TextView
        android:id="@+id/created_at"
        android:text="@string/request_created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_id"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/btn_accept"
        android:ems="3"
        android:text="@string/accept"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/round_component_no_padding"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_deny" />

    <TextView
        android:id="@+id/btn_deny"
        android:ems="3"
        android:text="@string/deny"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/round_component_no_padding"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:background="@color/gray_80"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_deny"/>

</androidx.constraintlayout.widget.ConstraintLayout>