<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toEndOf="@+id/before_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/before_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/before_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_text"/>

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="@+id/edit_id"
        app:layout_constraintTop_toBottomOf="@+id/register_text" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="18"
        android:hint="@string/hint_email"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/round_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text"/>

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nickname"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="@+id/edit_nickname"
        app:layout_constraintTop_toBottomOf="@+id/edit_id" />

    <TextView
        android:id="@+id/dup_nick_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/duplicated_nickname"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edit_id"
        app:layout_constraintTop_toBottomOf="@+id/edit_id" />

    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="18"
        android:hint="@string/hint_nickname"
        android:textSize="14sp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:ellipsize="none"
        android:maxLength="14"
        android:background="@drawable/round_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text"/>

    <TextView
        android:id="@+id/dup_nick_test"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/dup_test"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/gray_80"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="@+id/edit_nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text" />

    <ImageView
        android:id="@+id/test_nickname"
        android:layout_height="15dp"
        android:layout_width="15dp"
        android:background="@drawable/green_check"
        android:visibility="invisible"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toStartOf="@+id/dup_nick_test"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text" />

    <TextView
        android:id="@+id/pw_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pw"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="@+id/edit_pw"
        app:layout_constraintTop_toBottomOf="@+id/edit_nickname" />



    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="18"
        android:hint="@string/hint_pw"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:background="@drawable/round_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_text"/>

    <ImageView
        android:id="@+id/test_pw"
        android:layout_height="15dp"
        android:layout_width="15dp"
        android:background="@drawable/red_cross"
        android:visibility="invisible"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_pw"
        app:layout_constraintTop_toBottomOf="@+id/pw_text" />

    <TextView
        android:id="@+id/pw_valid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pw_valid"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="@+id/edit_pw_valid"
        app:layout_constraintTop_toBottomOf="@+id/edit_pw" />

    <EditText
        android:id="@+id/edit_pw_valid"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="18"
        android:hint="@string/pw_valid"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:background="@drawable/round_component"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_valid_text"/>

    <ImageView
        android:id="@+id/test_pw_valid"
        android:layout_height="15dp"
        android:layout_width="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/red_cross"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/edit_pw_valid"
        app:layout_constraintTop_toBottomOf="@+id/pw_valid_text" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:ems="17"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/done"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>