<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/update_ingredient"
        android:text="@string/update_ingredient"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ingredient_name"
        android:text="@string/ingredient_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/update_ingredient"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/main_theme"
        android:textSize="15sp"
        android:textStyle="bold"
        android:focusable="false"
        android:background="@drawable/filled_round_component"
        app:layout_constraintTop_toTopOf="@+id/ingredient_name"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_name"
        app:layout_constraintStart_toEndOf="@+id/ingredient_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ingredient_value"
        android:text="@string/ingredient_value"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_ingredient_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/main_theme"
        android:textSize="15sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:focusable="true"
        android:background="@drawable/filled_round_component"
        app:layout_constraintTop_toTopOf="@+id/ingredient_value"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_value"
        app:layout_constraintStart_toEndOf="@+id/ingredient_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ingredient_expired_at"
        android:text="@string/expired_at"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_ingredient_expired_at"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_date"
        android:textColor="@color/main_theme"
        android:textSize="15sp"
        android:textStyle="bold"
        android:inputType="date"
        android:focusable="true"
        android:background="@drawable/filled_round_component"
        app:layout_constraintTop_toTopOf="@+id/ingredient_expired_at"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_expired_at"
        app:layout_constraintStart_toEndOf="@+id/ingredient_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn_confirm"
        android:text="@string/confirm"
        android:textColor="@color/main_theme"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"/>

    <TextView
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_expired_at"/>

</androidx.constraintlayout.widget.ConstraintLayout>