<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:text="@string/premium_membership_make"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/main_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/membership_name"
        android:text="@string/grade_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_membership_name"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:inputType="text"
        android:focusable="true"
        android:background="@drawable/round_component"
        app:layout_constraintTop_toTopOf="@+id/membership_name"
        app:layout_constraintBottom_toBottomOf="@+id/membership_name"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/price"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/membership_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:focusable="true"
        android:background="@drawable/round_component"
        app:layout_constraintTop_toTopOf="@+id/price"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/main_theme"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edit_price"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edit_price"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>