<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/main_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/main_app_name"
        android:text="@string/admin_page"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/main_logo"
        app:layout_constraintTop_toTopOf="@+id/main_logo"
        app:layout_constraintBottom_toBottomOf="@+id/main_logo"/>

    <TextView
        android:id="@+id/manage_influencer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/manage_influencer_request"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center|start"
        android:background="@drawable/all_rounded_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logo"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/logout"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center|start"
        android:background="@drawable/all_rounded_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>